gcc/testsuite/g++.old-deja/g++.jason/crash6.C
// { dg-do assemble  }
// Bug: g++ dies on the below.

class A { };
void f ()
{
  A a;
  a.~a();			// { dg-error "" } causes segfault
}
